finish menu CRUD
