# docs/swagger.json
@@ -96,6 +96,33 @@
                 }
             }
         },
+        "/api/menu/delete": {
+            "post": {
+                "tags": [
+                    "菜单"
+                ],
+                "summary": "删除菜单",
+                "parameters": [
+                    {
+                        "description": "参数",
+                        "name": "params",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/menu.DeleteMenuReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "number"
+                        }
+                    }
+                }
+            }
+        },
         "/api/menu/list": {
             "get": {
                 "tags": [
@@ -107,6 +134,33 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/menu.Menu"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/menu/update": {
+            "post": {
+                "tags": [
+                    "菜单"
+                ],
+                "summary": "更新菜单",
+                "parameters": [
+                    {
+                        "description": "参数",
+                        "name": "params",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/menu.UpdateMenuReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "number"
                         }
                     }
                 }
@@ -210,7 +264,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/page.CreatePageReq"
+                            "$ref": "#/definitions/page.UpdatePageReq"
                         }
                     }
                 ],
@@ -244,9 +298,7 @@
         "menu.CreateMenuReq": {
             "type": "object",
             "required": [
-                "label",
-                "parent_id",
-                "to"
+                "label"
             ],
             "properties": {
                 "icon": {
@@ -266,6 +318,17 @@
                 },
                 "to": {
                     "type": "string"
+                }
+            }
+        },
+        "menu.DeleteMenuReq": {
+            "type": "object",
+            "required": [
+                "id"
+            ],
+            "properties": {
+                "id": {
+                    "type": "integer"
                 }
             }
         },
@@ -304,6 +367,36 @@
                 }
             }
         },
+        "menu.UpdateMenuReq": {
+            "type": "object",
+            "required": [
+                "id",
+                "label"
+            ],
+            "properties": {
+                "icon": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "label": {
+                    "type": "string"
+                },
+                "parent_id": {
+                    "type": "integer"
+                },
+                "permissions": {
+                    "type": "string"
+                },
+                "target": {
+                    "type": "string"
+                },
+                "to": {
+                    "type": "string"
+                }
+            }
+        },
         "page.CreatePageReq": {
             "type": "object",
             "required": [
@@ -337,6 +430,35 @@
             "properties": {
                 "id": {
                     "type": "integer"
+                }
+            }
+        },
+        "page.UpdatePageReq": {
+            "type": "object",
+            "required": [
+                "config",
+                "id",
+                "name",
+                "path"
+            ],
+            "properties": {
+                "config": {
+                    "type": "string"
+                },
+                "extend": {
+                    "type": "string"
+                },
+                "icon": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "path": {
+                    "type": "string"
                 }
             }
         }
