# module/page/page.controller.go
@@ -133,10 +133,19 @@ func deletePage(c *gin.Context) {
 	core.ResSuccess(c, id)
 }
 
+type UpdatePageReq struct {
+	ID     uint   `json:"id" binding:"required"`
+	Name   string `json:"name" binding:"required"`
+	Path   string `json:"path" binding:"required"`
+	Icon   string `json:"icon"`
+	Config string `json:"config" binding:"required"`
+	Extend string `form:"extend"`
+}
+
 // @Summary 更新页面
 // @Tags 页面
 // @Router /api/page/update [post]
-// @Param params body page.CreatePageReq true "参数"
+// @Param params body page.UpdatePageReq true "参数"
 // @Success 200 {number} 1
 func updatePage(c *gin.Context) {
 	// 参数校验
